--- a/package.json
+++ b/package.json
@@ -56,5 +56,12 @@
   },
   "engines": {
     "node": ">=20.18.3"
+  },
+  "dependencies": {
+    "@anon-aadhaar/core": "^2.4.3",
+    "@anon-aadhaar/react": "^2.4.3",
+    "@rainbow-me/rainbowkit": "^2.2.4",
+    "lucide-react": "^0.484.0",
+    "wagmi": "^2.14.15"
   }
 }
